--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
               android:orientation="vertical">
 
     <Button
-        android:id="@+id/main_jump_to_First"
+        android:id="@+id/im_args"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="携带参数跳转"/>
 
     <Button
-        android:id="@+id/main_jump_to_Sencond"
+        android:id="@+id/im_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClick"
